--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,14 @@
     <!-- Add custom CSS for styling -->
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Shopping Website</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,10 +40,9 @@
     <header class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Welcome to Our Online Store</h1>
-                    <p>Discover a wide range of products at great prices.</p>
-                </div>
+                <img src="./images/hero.jpg" alt="showcase" />
+                <h1>Welcome to Our Online Store</h1>
+                <p>Discover a wide range of products at great prices.</p>
             </div>
         </div>
     </header>
@@ -59,32 +61,40 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="product">
-                        <img src="images/p2.jpg" alt="Product 1" class="img-fluid">
-                        <h3>Product 1</h3>
+                        <img src="images/p2.jpg" alt="Product 2" class="img-fluid">
+                        <h3>Product 2</h3>
                         <p>Price: $19.99</p>
                         <button class="btn btn-primary">Add to Cart</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="product">
-                        <img src="images/p3.jpg" alt="Product 1" class="img-fluid">
-                        <h3>Product 1</h3>
+                        <img src="images/p3.jpg" alt="Product 3" class="img-fluid">
+                        <h3>Product 3</h3>
                         <p>Price: $19.99</p>
                         <button class="btn btn-primary">Add to Cart</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="product">
-                        <img src="images/p4.jpg" alt="Product 1" class="img-fluid">
-                        <h3>Product 1</h3>
+                        <img src="images/p4.jpg" alt="Product 4" class="img-fluid">
+                        <h3>Product 4</h3>
                         <p>Price: $19.99</p>
                         <button class="btn btn-primary">Add to Cart</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="product">
-                        <img src="images/p5.jpg" alt="Product 1" class="img-fluid">
-                        <h3>Product 1</h3>
+                        <img src="images/p5.jpg" alt="Product 5" class="img-fluid">
+                        <h3>Product 5</h3>
+                        <p>Price: $19.99</p>
+                        <button class="btn btn-primary">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="product">
+                        <img src="images/p6.jpg" alt="Product 6" class="img-fluid">
+                        <h3>Product 6</h3>
                         <p>Price: $19.99</p>
                         <button class="btn btn-primary">Add to Cart</button>
                     </div>
@@ -104,4 +114,5 @@
     <!-- Add Bootstrap and custom JavaScript at the end of the body -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
